// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/Indicateurs/detail/ApplyOpenDataModal Avec Conflits 1`] = `
<div
  className="flex flex-col gap-8"
>
  <div
    className="py-3 px-4 flex gap-4 bg-warning-2"
  >
    <span
      className="ri-information-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mt-0.5 text-warning-1"
    />
    <div
      className="flex flex-col gap-3"
    >
      <div
        className="text-base font-bold text-warning-1"
      >
        Conflit détecté
      </div>
      <div
        className="text-sm font-medium text-grey-9"
      >
        Vous êtes sur le point d’appliquer les « objectifs PCAET » à vos objectifs.
            Attention : certaines données des « objectifs PCAET » entrent en conflit avec vos objectifs et ont des valeurs différentes.
      </div>
    </div>
  </div>
  <div
    className="flex gap-2 min-w-min"
  >
    <input
      className="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
      id="replace-data"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="flex flex-col gap-1"
    >
      <label
        className="inline-flex items-center cursor-pointer ml-0 font-medium text-grey-8"
        htmlFor="replace-data"
      >
        Remplacer mes objectifs en cours par les objectifs PCAET
      </label>
    </div>
  </div>
  <div
    className="flex flex-wrap gap-4 w-full"
  >
    <table
      className="fr-table fr-table--bordered grow md:max-w-[calc(68%-1rem)]"
    >
      <thead>
        <tr>
          <th
            className="whitespace-break-spaces"
            scope="col"
          >
            Date
            

          </th>
          <th
            scope="col"
          >
            Mes 
            objectifs
            <span
              className="font-normal"
            >
               (
              teqCO2
              )
            </span>
          </th>
          <th
            scope="col"
          >
            <span
              className="capitalize"
            >
              objectifs
            </span>
             
            PCAET
            <span
              className="font-normal"
            >
               (
              teqCO2
              )
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            2022
          </td>
          <td
            className=""
          >
            141 299
          </td>
          <td>
            150 000
          </td>
        </tr>
        <tr>
          <td>
            2021
          </td>
          <td
            className=""
          >
            141 299
          </td>
          <td>
            140 000
          </td>
        </tr>
      </tbody>
    </table>
    <table
      className="fr-table fr-table--bordered fr-table--blue-ecume md:max-w-[32%]"
    >
      <thead>
        <tr>
          <th
            className="whitespace-break-spaces !text-center !px-8 !py-[0.31rem]"
          >
            Après validation
            

            <span
              className="capitalize"
            >
              objectifs
               
              PCAET
            </span>
            <span
              className="font-normal"
            >
               (
              teqCO2
              )
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            141 299
          </td>
        </tr>
        <tr>
          <td>
            141 299
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Indicateurs/detail/ApplyOpenDataModal Avec Conflits Ecrasement 1`] = `
<div
  className="flex flex-col gap-8"
>
  <div
    className="py-3 px-4 flex gap-4 bg-warning-2"
  >
    <span
      className="ri-information-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mt-0.5 text-warning-1"
    />
    <div
      className="flex flex-col gap-3"
    >
      <div
        className="text-base font-bold text-warning-1"
      >
        Conflit détecté
      </div>
      <div
        className="text-sm font-medium text-grey-9"
      >
        Vous êtes sur le point d’appliquer les « objectifs PCAET » à vos objectifs.
            Attention : certaines données des « objectifs PCAET » entrent en conflit avec vos objectifs et ont des valeurs différentes.
      </div>
    </div>
  </div>
  <div
    className="flex gap-2 min-w-min"
  >
    <input
      checked={true}
      className="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
      id="replace-data"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="flex flex-col gap-1"
    >
      <label
        className="inline-flex items-center cursor-pointer ml-0 font-medium text-grey-8"
        htmlFor="replace-data"
      >
        Remplacer mes objectifs en cours par les objectifs PCAET
      </label>
    </div>
  </div>
  <div
    className="flex flex-wrap gap-4 w-full"
  >
    <table
      className="fr-table fr-table--bordered grow md:max-w-[calc(68%-1rem)]"
    >
      <thead>
        <tr>
          <th
            className="whitespace-break-spaces"
            scope="col"
          >
            Date
            

          </th>
          <th
            scope="col"
          >
            Mes 
            objectifs
            <span
              className="font-normal"
            >
               (
              teqCO2
              )
            </span>
          </th>
          <th
            scope="col"
          >
            <span
              className="capitalize"
            >
              objectifs
            </span>
             
            PCAET
            <span
              className="font-normal"
            >
               (
              teqCO2
              )
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            2022
          </td>
          <td
            className="line-through"
          >
            141 299
          </td>
          <td>
            150 000
          </td>
        </tr>
        <tr>
          <td>
            2021
          </td>
          <td
            className="line-through"
          >
            141 299
          </td>
          <td>
            140 000
          </td>
        </tr>
      </tbody>
    </table>
    <table
      className="fr-table fr-table--bordered fr-table--blue-ecume md:max-w-[32%]"
    >
      <thead>
        <tr>
          <th
            className="whitespace-break-spaces !text-center !px-8 !py-[0.31rem]"
          >
            Après validation
            

            <span
              className="capitalize"
            >
              objectifs
               
              PCAET
            </span>
            <span
              className="font-normal"
            >
               (
              teqCO2
              )
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            150 000
          </td>
        </tr>
        <tr>
          <td>
            140 000
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Indicateurs/detail/ApplyOpenDataModal En Conflit Partiel 1`] = `
<div
  className="flex flex-col gap-8"
>
  <div
    className="py-3 px-4 flex gap-4 bg-warning-2"
  >
    <span
      className="ri-information-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mt-0.5 text-warning-1"
    />
    <div
      className="flex flex-col gap-3"
    >
      <div
        className="text-base font-bold text-warning-1"
      >
        Conflit détecté
      </div>
      <div
        className="text-sm font-medium text-grey-9"
      >
        Vous êtes sur le point d’appliquer les « objectifs PCAET » à vos objectifs.
            Attention : certaines données des « objectifs PCAET » entrent en conflit avec vos objectifs et ont des valeurs différentes.
      </div>
    </div>
  </div>
  <div
    className="flex gap-2 min-w-min"
  >
    <input
      className="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
      id="replace-data"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="flex flex-col gap-1"
    >
      <label
        className="inline-flex items-center cursor-pointer ml-0 font-medium text-grey-8"
        htmlFor="replace-data"
      >
        Remplacer mes objectifs en cours par les objectifs PCAET
      </label>
    </div>
  </div>
  <div
    className="flex flex-wrap gap-4 w-full"
  >
    <table
      className="fr-table fr-table--bordered grow md:max-w-[calc(68%-1rem)]"
    >
      <thead>
        <tr>
          <th
            className="whitespace-break-spaces"
            scope="col"
          >
            Date
            

          </th>
          <th
            scope="col"
          >
            Mes 
            objectifs
            <span
              className="font-normal"
            >
               (
              teqCO2
              )
            </span>
          </th>
          <th
            scope="col"
          >
            <span
              className="capitalize"
            >
              objectifs
            </span>
             
            PCAET
            <span
              className="font-normal"
            >
               (
              teqCO2
              )
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            2022
          </td>
          <td
            className=""
          >
            141 299
          </td>
          <td>
            150 000
          </td>
        </tr>
        <tr>
          <td>
            2021
          </td>
          <td
            className=""
          >
            141 299
          </td>
          <td>
            141 299
          </td>
        </tr>
      </tbody>
    </table>
    <table
      className="fr-table fr-table--bordered fr-table--blue-ecume md:max-w-[32%]"
    >
      <thead>
        <tr>
          <th
            className="whitespace-break-spaces !text-center !px-8 !py-[0.31rem]"
          >
            Après validation
            

            <span
              className="capitalize"
            >
              objectifs
               
              PCAET
            </span>
            <span
              className="font-normal"
            >
               (
              teqCO2
              )
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            141 299
          </td>
        </tr>
        <tr>
          <td>
            141 299
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Indicateurs/detail/ApplyOpenDataModal En Conflit Partiel Ecrasement 1`] = `
<div
  className="flex flex-col gap-8"
>
  <div
    className="py-3 px-4 flex gap-4 bg-warning-2"
  >
    <span
      className="ri-information-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mt-0.5 text-warning-1"
    />
    <div
      className="flex flex-col gap-3"
    >
      <div
        className="text-base font-bold text-warning-1"
      >
        Conflit détecté
      </div>
      <div
        className="text-sm font-medium text-grey-9"
      >
        Vous êtes sur le point d’appliquer les « objectifs PCAET » à vos objectifs.
            Attention : certaines données des « objectifs PCAET » entrent en conflit avec vos objectifs et ont des valeurs différentes.
      </div>
    </div>
  </div>
  <div
    className="flex gap-2 min-w-min"
  >
    <input
      checked={true}
      className="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
      id="replace-data"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="flex flex-col gap-1"
    >
      <label
        className="inline-flex items-center cursor-pointer ml-0 font-medium text-grey-8"
        htmlFor="replace-data"
      >
        Remplacer mes objectifs en cours par les objectifs PCAET
      </label>
    </div>
  </div>
  <div
    className="flex flex-wrap gap-4 w-full"
  >
    <table
      className="fr-table fr-table--bordered grow md:max-w-[calc(68%-1rem)]"
    >
      <thead>
        <tr>
          <th
            className="whitespace-break-spaces"
            scope="col"
          >
            Date
            

          </th>
          <th
            scope="col"
          >
            Mes 
            objectifs
            <span
              className="font-normal"
            >
               (
              teqCO2
              )
            </span>
          </th>
          <th
            scope="col"
          >
            <span
              className="capitalize"
            >
              objectifs
            </span>
             
            PCAET
            <span
              className="font-normal"
            >
               (
              teqCO2
              )
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            2022
          </td>
          <td
            className="line-through"
          >
            141 299
          </td>
          <td>
            150 000
          </td>
        </tr>
        <tr>
          <td>
            2021
          </td>
          <td
            className=""
          >
            141 299
          </td>
          <td>
            141 299
          </td>
        </tr>
      </tbody>
    </table>
    <table
      className="fr-table fr-table--bordered fr-table--blue-ecume md:max-w-[32%]"
    >
      <thead>
        <tr>
          <th
            className="whitespace-break-spaces !text-center !px-8 !py-[0.31rem]"
          >
            Après validation
            

            <span
              className="capitalize"
            >
              objectifs
               
              PCAET
            </span>
            <span
              className="font-normal"
            >
               (
              teqCO2
              )
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            150 000
          </td>
        </tr>
        <tr>
          <td>
            141 299
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Indicateurs/detail/ApplyOpenDataModal Sans Conflits 1`] = `
<div
  className="flex flex-col gap-8"
>
  <div
    className="flex flex-wrap gap-4 w-full"
  >
    <table
      className="fr-table fr-table--bordered grow md:max-w-[calc(68%-1rem)]"
    >
      <thead>
        <tr>
          <th
            className="whitespace-break-spaces"
            scope="col"
          >
            Date
            

          </th>
          <th
            scope="col"
          >
            Mes 
            objectifs
            <span
              className="font-normal"
            >
               (
              teqCO2
              )
            </span>
          </th>
          <th
            scope="col"
          >
            <span
              className="capitalize"
            >
              objectifs
            </span>
             
            PCAET
            <span
              className="font-normal"
            >
               (
              teqCO2
              )
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            2022
          </td>
          <td
            className=""
          />
          <td>
            141 299
          </td>
        </tr>
        <tr>
          <td>
            2021
          </td>
          <td
            className=""
          >
            141 299
          </td>
          <td>
            141 299
          </td>
        </tr>
      </tbody>
    </table>
    <table
      className="fr-table fr-table--bordered fr-table--blue-ecume md:max-w-[32%]"
    >
      <thead>
        <tr>
          <th
            className="whitespace-break-spaces !text-center !px-8 !py-[0.31rem]"
          >
            Après validation
            

            <span
              className="capitalize"
            >
              objectifs
               
              PCAET
            </span>
            <span
              className="font-normal"
            >
               (
              teqCO2
              )
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            141 299
          </td>
        </tr>
        <tr>
          <td>
            141 299
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Indicateurs/detail/ApplyOpenDataModal Variante Resultats 1`] = `
<div
  className="flex flex-col gap-8"
>
  <div
    className="py-3 px-4 flex gap-4 bg-warning-2"
  >
    <span
      className="ri-information-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mt-0.5 text-warning-1"
    />
    <div
      className="flex flex-col gap-3"
    >
      <div
        className="text-base font-bold text-warning-1"
      >
        Conflit détecté
      </div>
      <div
        className="text-sm font-medium text-grey-9"
      >
        Vous êtes sur le point d’appliquer les « résultats PCAET » à vos résultats.
            Attention : certaines données des « résultats PCAET » entrent en conflit avec vos résultats et ont des valeurs différentes.
      </div>
    </div>
  </div>
  <div
    className="flex gap-2 min-w-min"
  >
    <input
      className="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
      id="replace-data"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="flex flex-col gap-1"
    >
      <label
        className="inline-flex items-center cursor-pointer ml-0 font-medium text-grey-8"
        htmlFor="replace-data"
      >
        Remplacer mes résultats en cours par les résultats PCAET
      </label>
    </div>
  </div>
  <div
    className="flex flex-wrap gap-4 w-full"
  >
    <table
      className="fr-table fr-table--bordered grow md:max-w-[calc(68%-1rem)]"
    >
      <thead>
        <tr>
          <th
            className="whitespace-break-spaces"
            scope="col"
          >
            Date
            

          </th>
          <th
            scope="col"
          >
            Mes 
            résultats
            <span
              className="font-normal"
            >
               (
              teqCO2
              )
            </span>
          </th>
          <th
            scope="col"
          >
            <span
              className="capitalize"
            >
              résultats
            </span>
             
            PCAET
            <span
              className="font-normal"
            >
               (
              teqCO2
              )
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            2022
          </td>
          <td
            className=""
          >
            141 299
          </td>
          <td>
            150 000
          </td>
        </tr>
        <tr>
          <td>
            2021
          </td>
          <td
            className=""
          >
            141 299
          </td>
          <td>
            141 299
          </td>
        </tr>
      </tbody>
    </table>
    <table
      className="fr-table fr-table--bordered fr-table--blue-ecume md:max-w-[32%]"
    >
      <thead>
        <tr>
          <th
            className="whitespace-break-spaces !text-center !px-8 !py-[0.31rem]"
          >
            Après validation
            

            <span
              className="capitalize"
            >
              résultats
               
              PCAET
            </span>
            <span
              className="font-normal"
            >
               (
              teqCO2
              )
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            141 299
          </td>
        </tr>
        <tr>
          <td>
            141 299
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
